<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar" />

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:gravity="center"

        android:weightSum="13.2">
        <Button
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click to send notification"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="13.2">

        <!--Weight 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/welcome"
                android:textSize="20sp" />

        </LinearLayout>


        <!--Weight 8-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:paddingTop="16dp">

            <RelativeLayout
                android:id="@+id/parent_of_fill_forms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/center_divider"
                android:layout_alignParentTop="true"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/student_address_book"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@id/center_divider_inner_top"
                    android:layout_toLeftOf="@id/center_divider_inner_top"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="16dp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_person_add_black_24dp" />

                    <TextView
                        android:id="@+id/submitted_forms_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/student_address_book"
                        android:textColor="@color/app_blue"
                        android:textSize="24sp" />

                </LinearLayout>

                <View
                    android:id="@+id/center_divider_inner_top"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/send_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/center_divider_inner_top"
                    android:layout_toRightOf="@id/center_divider_inner_top"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="16dp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_message_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/send_sms"
                        android:textColor="@color/app_blue"
                        android:textSize="24sp" />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@+id/center_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/center_divider"
                android:layout_alignParentBottom="true"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/track_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@id/center_divider_inner_bottom"
                    android:layout_toLeftOf="@id/center_divider_inner_bottom"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="16dp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_my_location_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/track_sms_delivery"
                        android:textColor="@color/app_blue"
                        android:textSize="24sp" />

                </LinearLayout>

                <View
                    android:id="@+id/center_divider_inner_bottom"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/assessment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/center_divider_inner_bottom"
                    android:layout_toRightOf="@id/center_divider_inner_bottom"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="16dp"
                        android:tint="@color/colorPrimary"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/fill_assessment_data"
                        android:textColor="@color/app_blue"
                        android:textSize="24sp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <!--Weight 1-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!--Weight 1.2-->
        <LinearLayout
            android:id="@+id/helpline_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:alpha="0.8"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/helpline_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_border_blue"
                android:drawableStart="@drawable/ic_call_blue_24dp"
                android:drawableLeft="@drawable/ic_call_blue_24dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/support"
                android:textAlignment="center"
                android:textColor="@color/app_blue" />

        </LinearLayout>

        <!--Weight 2-->
        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.6"
                android:padding="10dp"
                android:src="@drawable/govt_of_hp_logo" />

            <ImageView
                android:id="@+id/logo2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75" />

            <ImageView
                android:id="@+id/logo3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:alpha="0.6"
                android:padding="16dp"
                android:src="@drawable/samarth_logo" />

            <ImageView
                android:id="@+id/logo4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75" />

            <ImageView
                android:id="@+id/logo5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.6"
                android:src="@drawable/ssa_logo" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>